# lablab-edge

./: docker-compose.yml
backend/: .env  .gitignore  DockerFile  main.py  pyproject.toml  test.py  updated_main.py
backend/edge_runners/: pyvenv.cfg
backend/edge_runners/Scripts/: activate  activate.bat
backend/models/: emotion_analyzer.py  emotion_therapy.py  image_generation.py  music_generation.py  prompt_for_image_generation.py  prompt_for_music_generation.py  updated_image_generation.py  updated_prompt_image_generation.py  video_generation.py  video_generation_request.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/actions/: emotion-analyzer.ts  emotional-therapy.ts  image-generation.ts  music-generation.ts  video-generation.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: chat-interface.tsx  loader.tsx
frontend/components/ui/: textarea.tsx
